force-app/main/default/objects/Placement__c/fields/AccountingDate__c.field-meta.xml
<CustomField>
    <fullName>AccountingDate__c</fullName>
    <label>Accounting Date</label>
    <type>Date</type>
</CustomField>