force-app/main/default/objects/Placement__c/fields/AllSignedSlipCollected_is__c.field-meta.xml
<CustomField>
    <fullName>AllSignedSlipCollected_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Signed Slip Collected</label>
    <type>Checkbox</type>
</CustomField>