force-app/main/default/objects/Placement__c/fields/BDXPeriod__c.field-meta.xml
<CustomField>
    <fullName>BDXPeriod__c</fullName>
    <label>(X)BDX Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>