force-app/main/default/objects/Placement__c/fields/BrokerageBasis__c.field-meta.xml
<CustomField>
    <fullName>BrokerageBasis__c</fullName>
    <label>Brokerage Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
            </value>
            <value>
                <fullName>Gross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>