force-app/main/default/objects/Placement__c/fields/CDIssueDate__c.field-meta.xml
<CustomField>
    <fullName>CDIssueDate__c</fullName>
    <label>C/D Note Issue Date</label>
    <type>Date</type>
</CustomField>