force-app/main/default/objects/Placement__c/fields/CedantContact_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantContact_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>