force-app/main/default/objects/Placement__c/fields/CedantCountry_fm__c.field-meta.xml
<CustomField>
    <fullName>CedantCountry_fm__c</fullName>
    <formula>Text ( Opportunity_lk__r.CedantName_lk__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cedant Country</label>
    <type>Text</type>
</CustomField>