force-app/main/default/objects/Placement__c/fields/CedantFacility_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantFacility_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant Facility</label>
    <referenceTo>COM_FacilityParticipant__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>PlacementsByCedantFacility</relationshipName>
    <type>Lookup</type>
</CustomField>