force-app/main/default/objects/Placement__c/fields/CedantName_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantName_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placements (Cedant Name)</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>