force-app/main/default/objects/Placement__c/fields/CedantRefNo__c.field-meta.xml
<CustomField>
    <fullName>CedantRefNo__c</fullName>
    <label>(M) Cedant Ref No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>