force-app/main/default/objects/Placement__c/fields/CedingType3__c.field-meta.xml
<CustomField>
    <fullName>CedingType3__c</fullName>
    <label>Ceding Type3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CedingType2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>COM_Ceding_Type3</valueSetName>
    </valueSet>
</CustomField>