force-app/main/default/objects/Placement__c/fields/Client_is__c.field-meta.xml
<CustomField>
    <fullName>Client_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>