force-app/main/default/objects/Placement__c/fields/CopiedtoBizplan_is__c.field-meta.xml
<CustomField>
    <fullName>CopiedtoBizplan_is__c</fullName>
    <defaultValue>false</defaultValue>
    <description>사업계획으로 복사됨?</description>
    <label>Is Copied to Bizplan</label>
    <type>Checkbox</type>
</CustomField>