force-app/main/default/objects/Placement__c/fields/CoverNoteIssueDate__c.field-meta.xml
<CustomField>
    <fullName>CoverNoteIssueDate__c</fullName>
    <label>Cover Note Issue Date</label>
    <type>Date</type>
</CustomField>