force-app/main/default/objects/Placement__c/fields/CreateStatus__c.field-meta.xml
<CustomField>
    <fullName>CreateStatus__c</fullName>
    <label>Create Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>