force-app/main/default/objects/Placement__c/fields/CurrentMaxCreditSeq__c.field-meta.xml
<CustomField>
    <fullName>CurrentMaxCreditSeq__c</fullName>
    <label>Current Max Credit Seq</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>