force-app/main/default/objects/Placement__c/fields/DeclarationDate__c.field-meta.xml
<CustomField>
    <fullName>DeclarationDate__c</fullName>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>