force-app/main/default/objects/Placement__c/fields/DeclarationPeriod__c.field-meta.xml
<CustomField>
    <fullName>DeclarationPeriod__c</fullName>
    <label>Declaration Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>