force-app/main/default/objects/Placement__c/fields/DecTargetPlacement__c.field-meta.xml
<CustomField>
    <fullName>DecTargetPlacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Declaration Target</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placements (Declaration Target)</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>