force-app/main/default/objects/Placement__c/fields/ENDEffectivedDate__c.field-meta.xml
<CustomField>
    <fullName>ENDEffectivedDate__c</fullName>
    <description>배서/인식기준일</description>
    <label>END Effectived Date</label>
    <type>Date</type>
</CustomField>