force-app/main/default/objects/Placement__c/fields/EndorseComments__c.field-meta.xml
<CustomField>
    <fullName>EndorseComments__c</fullName>
    <label>Endorse Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>