force-app/main/default/objects/Placement__c/fields/EndorsePremium__c.field-meta.xml
<CustomField>
    <fullName>EndorsePremium__c</fullName>
    <label>Endorse Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>