force-app/main/default/objects/Placement__c/fields/EndReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>EndReceivedDate__c</fullName>
    <label>End Received Date</label>
    <type>Date</type>
</CustomField>