force-app/main/default/objects/Placement__c/fields/ENDYN_fm__c.field-meta.xml
<CustomField>
    <fullName>ENDYN_fm__c</fullName>
    <formula>IF ( ENDNo__c = 0 &amp;&amp; ( TODAY() &gt; InceptionDate__c &amp;&amp; TODAY() &lt; ExpirationDate__c  ), TRUE,
 IF ( ENDNo__c &gt;= 1 &amp;&amp; ( TODAY() &gt; ENDEffectivedDate__c &amp;&amp; TODAY() &lt; ExpirationDate__c  ), TRUE, FALSE
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ENDYN</label>
    <type>Checkbox</type>
</CustomField>