force-app/main/default/objects/Placement__c/fields/IdentificationValue__c.field-meta.xml
<CustomField>
    <fullName>IdentificationValue__c</fullName>
    <description>계약식별값</description>
    <label>Identification Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>