force-app/main/default/objects/Placement__c/fields/IncomeClass__c.field-meta.xml
<CustomField>
    <fullName>IncomeClass__c</fullName>
    <label>Income Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>신규(갱신성)</fullName>
            </value>
            <value>
                <fullName>신규(일회성)</fullName>
            </value>
            <value>
                <fullName>갱신</fullName>
            </value>
            <value>
                <fullName>배서</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>