force-app/main/default/objects/Placement__c/fields/Instal__c.field-meta.xml
<CustomField>
    <fullName>Instal__c</fullName>
    <label>Instal.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>