force-app/main/default/objects/Placement__c/fields/InstalDate__c.field-meta.xml
<CustomField>
    <fullName>InstalDate__c</fullName>
    <label>Instal Date</label>
    <type>Date</type>
</CustomField>