force-app/main/default/objects/Placement__c/fields/InsurancePolicyNature__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicyNature__c</fullName>
    <label>InsurancePolicy Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offshores</fullName>
            </value>
            <value>
                <fullName>Onshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>