force-app/main/default/objects/Placement__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <description>계약자(한국어)</description>
    <label>Insured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>