force-app/main/default/objects/Placement__c/fields/InsuredAcronym_fm__c.field-meta.xml
<CustomField>
    <fullName>InsuredAcronym_fm__c</fullName>
    <formula>OriginalInsured_lk__r.CompanyAcronym__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Acronym</label>
    <type>Text</type>
</CustomField>