force-app/main/default/objects/Placement__c/fields/InsuredGroup_lk__c.field-meta.xml
<CustomField>
    <fullName>InsuredGroup_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured Group</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>