force-app/main/default/objects/Placement__c/fields/InsuredKOR_fm__c.field-meta.xml
<CustomField>
    <fullName>InsuredKOR_fm__c</fullName>
    <formula>OriginalInsured_lk__r.CompanyNameKor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured_KOR</label>
    <type>Text</type>
</CustomField>