force-app/main/default/objects/Placement__c/fields/Insurer_lk__c.field-meta.xml
<CustomField>
    <fullName>Insurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>보험사</description>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placements (Insurer)</relationshipLabel>
    <relationshipName>PlacementsAsInsurer</relationshipName>
    <type>Lookup</type>
</CustomField>