force-app/main/default/objects/Placement__c/fields/InternalCoBroker__c.field-meta.xml
<CustomField>
    <fullName>InternalCoBroker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>내부 Co-Broker</description>
    <label>Co-Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Placements_InternalCoBroker</relationshipName>
    <type>Lookup</type>
</CustomField>