force-app/main/default/objects/Placement__c/fields/LKInsured__c.field-meta.xml
<CustomField>
    <fullName>LKInsured__c</fullName>
    <label>LK Insured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>