force-app/main/default/objects/Placement__c/fields/LKRefNo_fm__c.field-meta.xml
<CustomField>
    <fullName>LKRefNo_fm__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Id, LKRefNoh__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LK Ref. No.</label>
    <type>Text</type>
</CustomField>