force-app/main/default/objects/Placement__c/fields/LKRefNoh__c.field-meta.xml
<CustomField>
    <fullName>LKRefNoh__c</fullName>
    <label>LK Ref. No(h)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>