force-app/main/default/objects/Placement__c/fields/LOBDetail__c.field-meta.xml
<CustomField>
    <fullName>LOBDetail__c</fullName>
    <label>(X)LOB_Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>