force-app/main/default/objects/Placement__c/fields/ManualInput__c.field-meta.xml
<CustomField>
    <fullName>ManualInput__c</fullName>
    <label>Manual Input?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>예</fullName>
            </value>
            <value>
                <fullName>아니오</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>