force-app/main/default/objects/Placement__c/fields/NeedRecalculate_is__c.field-meta.xml
<CustomField>
    <fullName>NeedRecalculate_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Recalculate</label>
    <type>Checkbox</type>
</CustomField>