force-app/main/default/objects/Placement__c/fields/NettoRIPrem__c.field-meta.xml
<CustomField>
    <fullName>NettoRIPrem__c</fullName>
    <label>Net to RI Prem.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>