force-app/main/default/objects/Placement__c/fields/OfferedDate__c.field-meta.xml
<CustomField>
    <fullName>OfferedDate__c</fullName>
    <label>Offered Date</label>
    <type>Date</type>
</CustomField>