force-app/main/default/objects/Placement__c/fields/Opportunity_lk__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>