force-app/main/default/objects/Placement__c/fields/OriginalFXRateDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalFXRateDate__c</fullName>
    <description>최초 환율 적용일</description>
    <label>Original FX Rate Date</label>
    <type>Date</type>
</CustomField>