force-app/main/default/objects/Placement__c/fields/OriginalInsured_lk__c.field-meta.xml
<CustomField>
    <fullName>OriginalInsured_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>원계약자(재)</description>
    <label>Original Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>PlacementsAsOriginalInsured</relationshipName>
    <type>Lookup</type>
</CustomField>