force-app/main/default/objects/Placement__c/fields/OriginalPlacement__c.field-meta.xml
<CustomField>
    <fullName>OriginalPlacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>최초 계약</description>
    <label>Original Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placements (Original Placement)</relationshipLabel>
    <relationshipName>Placements_OriginalPlacement</relationshipName>
    <type>Lookup</type>
</CustomField>