force-app/main/default/objects/Placement__c/fields/ParentPlacement__c.field-meta.xml
<CustomField>
    <fullName>ParentPlacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>배서대상</description>
    <label>END Target</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placements (END Target)</relationshipLabel>
    <relationshipName>Placements_ParentPlacement</relationshipName>
    <type>Lookup</type>
</CustomField>