force-app/main/default/objects/Placement__c/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>일시납</fullName>
            </value>
            <value>
                <fullName>분납</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>