force-app/main/default/objects/Placement__c/fields/PlacementClosingDate__c.field-meta.xml
<CustomField>
    <fullName>PlacementClosingDate__c</fullName>
    <label>Send to Close date</label>
    <type>Date</type>
</CustomField>