force-app/main/default/objects/Placement__c/fields/PlacementCreated_is__c.field-meta.xml
<CustomField>
    <fullName>PlacementCreated_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement Created</label>
    <type>Checkbox</type>
</CustomField>