force-app/main/default/objects/Placement__c/fields/PlannedRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedRenewalDate__c</fullName>
    <label>(X)Planned Renewal Date</label>
    <type>Date</type>
</CustomField>