force-app/main/default/objects/Placement__c/fields/PlannedRenewalDate_fm__c.field-meta.xml
<CustomField>
    <fullName>PlannedRenewalDate_fm__c</fullName>
    <formula>ADDMONTHS(InceptionDate__c, 11)</formula>
    <label>Planned Renewal Date</label>
    <type>Date</type>
</CustomField>