force-app/main/default/objects/Placement__c/fields/PPWDate__c.field-meta.xml
<CustomField>
    <fullName>PPWDate__c</fullName>
    <label>(X)PPW Date</label>
    <type>Date</type>
</CustomField>