force-app/main/default/objects/Placement__c/fields/PPWDays__c.field-meta.xml
<CustomField>
    <fullName>PPWDays__c</fullName>
    <description>PPW 인정기간</description>
    <label>(X)PPW Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>