force-app/main/default/objects/Placement__c/fields/PPWType__c.field-meta.xml
<CustomField>
    <fullName>PPWType__c</fullName>
    <label>(X)PPW Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LSW</fullName>
            </value>
            <value>
                <fullName>TOR</fullName>
            </value>
            <value>
                <fullName>없음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>