force-app/main/default/objects/Placement__c/fields/PriorInsurancePlacementId__c.field-meta.xml
<CustomField>
    <fullName>PriorInsurancePlacementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements_PriorInsurancePlacementId</relationshipName>
    <type>Lookup</type>
</CustomField>