force-app/main/default/objects/Placement__c/fields/ProducingCoBroker_lk__c.field-meta.xml
<CustomField>
    <fullName>ProducingCoBroker_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producing Co-Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placements (Producing Co-Broker)</relationshipLabel>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>