force-app/main/default/objects/Placement__c/fields/ProducingCobrokerContact__c.field-meta.xml
<CustomField>
    <fullName>ProducingCobrokerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producing Co-broker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements (Producing Co-broker Contact)</relationshipLabel>
    <relationshipName>Placements_ProducingCobrokerContact</relationshipName>
    <type>Lookup</type>
</CustomField>