force-app/main/default/objects/Placement__c/fields/ProducingSettlementType__c.field-meta.xml
<CustomField>
    <fullName>ProducingSettlementType__c</fullName>
    <label>Producing Settlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Together</fullName>
            </value>
            <value>
                <fullName>Separate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>