force-app/main/default/objects/Placement__c/fields/Proration__c.field-meta.xml
<CustomField>
    <fullName>Proration__c</fullName>
    <label>Proration</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>