force-app/main/default/objects/Placement__c/fields/Proration_fm__c.field-meta.xml
<CustomField>
    <fullName>Proration_fm__c</fullName>
    <formula>IF(
    OR(
        ISNULL(InceptionDate__c), 
        ISNULL(ExpirationDate__c), 
        ISNULL( ENDEffectivedDate__c ),
        (ExpirationDate__c - InceptionDate__c) &lt;= 0
    ),
    0,
    /* 분자: 남은 기간 / 분모: 전체 기간 */
    MAX(0, 
        (ExpirationDate__c -  ENDEffectivedDate__c  +1) / (ExpirationDate__c - InceptionDate__c +1)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proration</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>