force-app/main/default/objects/Placement__c/fields/RefInsurancePolicy_lk__c.field-meta.xml
<CustomField>
    <fullName>RefInsurancePolicy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Placements (Ref. Insurance Policy)</relationshipLabel>
    <relationshipName>PlacementsAsRefPolicy</relationshipName>
    <type>Lookup</type>
</CustomField>