force-app/main/default/objects/Placement__c/fields/RefRetailPolicy_lk__c.field-meta.xml
<CustomField>
    <fullName>RefRetailPolicy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Retail Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>PlacementsAsRetailPolicy</relationshipName>
    <type>Lookup</type>
</CustomField>