force-app/main/default/objects/Placement__c/fields/Reinsurer_lk__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placements (Reinsurer)</relationshipLabel>
    <relationshipName>PlacementsAsReinsurer</relationshipName>
    <type>Lookup</type>
</CustomField>