force-app/main/default/objects/Placement__c/fields/RenewalOppoty_lk__c.field-meta.xml
<CustomField>
    <fullName>RenewalOppoty_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Oppty</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Placements (Renewal Oppty)</relationshipLabel>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>