force-app/main/default/objects/Placement__c/fields/RenewalOpptyCreate__c.field-meta.xml
<CustomField>
    <fullName>RenewalOpptyCreate__c</fullName>
    <label>(X)Renewal Oppty Create</label>
    <type>Date</type>
</CustomField>