force-app/main/default/objects/Placement__c/fields/RenewalOpptyCreate_fm__c.field-meta.xml
<CustomField>
    <fullName>RenewalOpptyCreate_fm__c</fullName>
    <formula>ADDMONTHS(InceptionDate__c  ,9)</formula>
    <label>Renewal Oppty Create</label>
    <type>Date</type>
</CustomField>