force-app/main/default/objects/Placement__c/fields/RetailBrokingParticipation_is__c.field-meta.xml
<CustomField>
    <fullName>RetailBrokingParticipation_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Broking Participation</label>
    <type>Checkbox</type>
</CustomField>