force-app/main/default/objects/Placement__c/fields/SLICreated_is__c.field-meta.xml
<CustomField>
    <fullName>SLICreated_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLICreated</label>
    <type>Checkbox</type>
</CustomField>