force-app/main/default/objects/Placement__c/fields/SOAPeriod__c.field-meta.xml
<CustomField>
    <fullName>SOAPeriod__c</fullName>
    <description>SOA 산정기간</description>
    <label>(X)SOA Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>