force-app/main/default/objects/Placement__c/fields/TaxAmt__c.field-meta.xml
<CustomField>
    <fullName>TaxAmt__c</fullName>
    <label>Tax Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>