force-app/main/default/objects/Placement__c/fields/TotalBKG__c.field-meta.xml
<CustomField>
    <fullName>TotalBKG__c</fullName>
    <label>Total BKG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>