force-app/main/default/objects/Placement__c/fields/TotalBrkg__c.field-meta.xml
<CustomField>
    <fullName>TotalBrkg__c</fullName>
    <label>Total Brkg(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>