force-app/main/default/objects/Placement__c/fields/TotalInstalment__c.field-meta.xml
<CustomField>
    <fullName>TotalInstalment__c</fullName>
    <label>Total Instalment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>